--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "dev": "cross-env NODE_ENV=test ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
     "build:ui": "rm -rf front && cd ../aistracker-frontend && npm run build --prod && cp -r build ../aistracker/front",
-    "deploy:full":"rm -rf build && npm run tsc && npm run build:ui && git add . && git commit -m 'build' && git push && npm run deploy",
+    "deploy:full": "rm -rf build && npm run tsc && npm run build:ui && git add . && git commit -m 'build' && git push && npm run deploy",
     "deploy": "git push heroku main"
   },
   "author": "Mikael Bärlund",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
